...
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: <Widget>[
            Semantics(
              identifier: 'counter_hint',
              label: 'Push plus button to increase counter:',
              child: const Text(
                'Push plus button to increase counter:',
                textAlign: TextAlign.center,
              ),
            ),
...
